# ddpm-mnist

./: .gitignore  main.py  pyproject.toml  test-notebook.ipynb  train.py
scripts/: sample.py  train.py
src/: diffusion.py  load_data.py  unet.py  utils.py
src/ddpm/: __init__.py  diffusion.py  model.py
