[project]
name = "ddpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "wandb>=0.28.0",
]
